@@ -1,3 +1,8 @@
+2016-06-03  Jan Hubicka  <jh@suse.cz>
+
+	* g++.dg/tree-ssa/pred-1.C: New testcase
+	* gcc.dg/tree-ssa/pred-1.c: New testcase
+
 2016-06-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	PR target/70957
